--- a/public.html/index.html
+++ b/public.html/index.html
@@ -30,7 +30,7 @@
 
           <div id="navbar" class="collapse navbar-collapse">
            <ul class="nav navbar-nav">        
-             <li><a href='login.html'>Log on</a></li>
+             <li><a href='login.html'>Login</a></li>
              <li><a href='sign_up.html'>Sign Up Here</a></li>
              <li><a href='page_2.html'>Menu</a></li>
              <li><a href='page_3.html'>About/Contact Us</a></li>
